Fix socials spacing and icon alignment

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -14,9 +14,14 @@ footer {
 }
 
 .socials {
+  li {
+    padding-bottom: 5px;
+  }
+
   img {
-    height: 1rem;
-    width: 1rem;
+    vertical-align: middle;
+    height: 1.1rem;
+    width: 1.1rem;
   }
 
   span {
